# donanet

./: .gitignore  Dockerfile  README.md  configure.py  donanet.py  mkdocs.yml  pyproject.toml  setup.sh
core/: system.py
docs/: about.md  admin-guide.md  donanet-model.md  features.md  index.md  installation-guide.md  user-guide.md
docs/stylesheets/: extras.css
templates/: build.sh.j2  docker-compose.gpu.yml.j2  docker-compose.yml.j2  env_template.j2  exec.sh.j2  info.sh.j2  prepare.sh.j2  ps.sh.j2  test.sh.j2  train.sh.j2
weights/: donanet_trapper_weights.txt
