[project]
name = "donanet"
version = "0.1.0"
description = "WildINTEL YOLO training, evaluation and inference CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12.0",
  "rich>=14.0.0",
  "ultralytics>=8.3.0",
  "pillow>=10.0.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.4.0",
  "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mike>=2.1.0",
]
configure = [
  "jinja2>=3.1",
  "psutil>=5.9",
]

[project.scripts]
donanet = "donanet:app"
